--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/VHM-logo-transparent.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
     <title>VaxHeroMoms</title>
 </head>
 <body>
+    <header class="header">
+        <div class="logo">
+            <img src="assets/VHM-logo-transparent.png" alt="vhm logo">
+            <span>VaxHeroMoms</span>
+        </div>
     
+        <div class="socials">
+            <button class="social gbtn"><img class="gmail" src="assets/logo-gmail.svg" alt="icon-gmail"></button>
+            <button class="social fbtn"><img class="gmail" src="assets/logo-facebook.svg" alt="icon-facebook"></button>
+            <button class="social lbtn"><img src="assets/logo-linkedin.svg" alt="icon-linkedin"></button>
+            <button class="social ibtn"><img class="gmail" src="assets/logo-instagram.svg" alt="icon-instagram"></button>
+            <button class="social xbtn"><img src="assets/logo-x.svg" alt="icon-x"></button>
+        </div>
+    </header>
+
+    <script src="app.js"></script>
 </body>
 </html>
