--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
 
     <div class="contact-container" id="contact">
         <h2>Contact Us</h2>
-        <form action="send-email.php" method="post">
+        <form action="https://formspree.io/f/xgegnkzl" method="post">
             <label for="name">Name:</label><br>
             <input type="text" id="name" name="name" required><br>
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email" required><br>
             <label for="message">Message:</label><br>
             <textarea id="message" name="message" required></textarea><br><br>
+
+            <input type="hidden" name="_redirect" value="https://joemarv.github.io/vaxheromoms/thank-you.html">
+
             <input type="submit" value="Submit">
         </form>
     </div>
