--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="assets/VHM-logo-transparent.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
     <title>VaxHeroMoms</title>
 </head>
@@ -174,12 +175,9 @@
     <section class="act" id= "act">
         <span class="act-header">Act Now</span>
         <div class="act-body">
-            <span class="act-body-header">
-                Experience personalised healthcare on your terms. Skip the trip to the health centre
-                and order convenient home vaccinations at an affordable cost.
-            </span>
-
-            <div id="map"></div>
+            <div class="map-container">
+                <div id="map"></div>
+            </div>
         </div>
     </section>
 
@@ -225,6 +223,5 @@
 
 
     <script src="app.js"></script>
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </body>
 </html>
