--- a/index.html
+++ b/index.html
@@ -176,7 +176,36 @@
         <span class="act-header">Act Now</span>
         <div class="act-body">
             <div class="map-container">
+                <span class="map-container-text">
+                    Locate the nearest Health centre to you on the map to get vaccinated.
+                </span>
+
                 <div id="map"></div>
+            </div>
+
+            <div class="number-container">
+                <span class="number-header">For further enquiries, reach out on:</span>
+                    
+                <div class="numbers">
+                    <div class="number">
+                        <img src="assets/call-sharp.svg" alt="phone image">
+                        <span>+234 808 268 5876</span>
+                    </div>
+                    
+                    <div class="number">
+                        <img src="assets/call-sharp.svg" alt="phone image">
+                        <span>+234 703 146 6024</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="newsletter-container">
+                <span class="newsletter-header">Subscribe to Our Newsletter to receive more information on Hepatitis B, baby health, and book recommendations for pregnant women</span>
+
+                <form  id="newsletterForm">
+                    <input type="email" name="email" placeholder="Email Address" class="final" required>
+                    <input type="submit" value="Subscribe" class="subscribe-button">
+                </form>
             </div>
         </div>
     </section>
